test/typeerrors/Heuristics/UnifierAlternative.hs
test x = case x of
            (a,b) -> (a True, a "hello", b)
